# linearAlgebra_MA

./: CMakeLists.txt  LICENSE  README.md  todo
.github/workflows/: build_test_all_branches.yml  build_test_default_branch.yml  github-actions-demo.yml  package_release.yml  package_test.yml
include/complex/: complex.hpp
include/linear_algebra_ma/: geometries.hpp  linearAlgebra.hpp  matrices.hpp
include/linear_algebra_ma/geometries/: line.hpp  point.hpp  segment.hpp
src/complex/: complex.cpp
src/linear_algebra_ma/: geometries.cpp  linear_algebra.cpp
src/linear_algebra_ma/geometries/: line.cpp  point.cpp  segment.cpp
src/linear_algebra_ma/linear_algebra/: linear_algebra.cpp  operators.cpp
src/linear_algebra_ma/matrices/: matrices.cpp  matrices.tpp  operators.cpp  operators.tpp
tests/: test.cpp  test_complex.cpp  test_geometries.cpp  test_linear_algebra.cpp  test_matrices.cpp
